--- a/init.org
+++ b/init.org
@@ -165,19 +165,9 @@
 #+end_src
 * Faces for emacs
 #+begin_src emacs-lisp
-  (when (my-system-type-is-gnu)
-    (set-face-attribute 'default nil :font "Hack Nerd Font-11")
-    (set-face-attribute 'fixed-pitch nil :font "Hack Nerd Font-11")
-    )
-
-  (when (my-system-type-is-windows)
-    (set-face-attribute 'default nil :font "CaskaydiaCove NF-11")
-    (set-face-attribute 'fixed-pitch nil :font "Caskaydiacove NF-11")
-    )
-
-  (set-face-attribute 'variable-pitch nil :font "Source Sans Pro-13")  
-
-
+  (set-face-attribute 'default nil :font "Hack Nerd Font-11")
+  (set-face-attribute 'fixed-pitch nil :font "Hack Nerd Font-11")
+  (set-face-attribute 'variable-pitch nil :font "Source Sans Pro-13")
   (add-hook 'org-mode-hook 'variable-pitch-mode)
   (custom-theme-set-faces
    'user
@@ -186,8 +176,7 @@
    `(org-level-3 ((t (:height 1.1))))
    `(org-level-4 ((t (:height 1)))))
   (add-to-list 'default-frame-alist
-               '(font . "Hack Nerd Font-12")
-               '(font . "CaskaydiaCove-12"))
+               '(font . "Hack Nerd Font-12"))
 #+end_src
 * Keybindings
 #+begin_src emacs-lisp
@@ -366,7 +355,7 @@
              leetcode-save-solutions t
              leetcode-directory "~/leetcode"))
    #+end_src
-** pdf-tools
+** Pdftools
    #+begin_src emacs-lisp
      (use-package pdf-tools   
        :config   (pdf-tools-install)   
@@ -406,7 +395,14 @@
     :hook 
     (after-init . org-roam-mode)
     :custom
-    (org-roam-directory "~/Dropbox/Zettel"))
+    (org-roam-directory "~/Dropbox/Zettel")
+    :general
+    (:prefix "C-c"
+     "r" '(:ignore t :wk roam)
+     "rr" 'org-roam
+     "rf" 'org-roam-find-file
+     "ri" 'org-roam-insert
+     "rc" 'org-roam-capture))
   (use-package company-org-roam
     :straight (:host github :repo "jethrokuan/company-org-roam")
     :config
@@ -458,12 +454,7 @@
 
   (add-hook 'org-export-before-processing-hook 'my/org-export-preprocessor)
 
-  (my-leader-def
-    "r" '(:ignore t :wk roam)
-    "rr" 'org-roam
-    "rf" 'org-roam-find-file
-    "ri" 'org-roam-insert
-    "rc" 'org-roam-capture)
+
   (setq org-roam-db-location "~/Dropbox/brain/roamdb/roam-home.db")
 #+end_src
 ** Org-capture advice
@@ -489,9 +480,14 @@
 
      (setq org-capture-templates '(("j" "Journal entry" entry (function org-journal-find-location)
                                     "* %(format-time-string org-journal-time-format)%^{Title}\n%i%?")))
+
    #+end_src
+* Hydra
+#+begin_src emacs-lisp
+  (use-package hydra)
+#+end_src
 ** lispy
-#+begin_src emacs-lisp :tangle yes
+#+begin_src emacs-lisp :tangle no
   (use-package lispy
     :config
     (add-hook 'emacs-lisp-mode-hook (lambda () (lispy-mode 1)))
@@ -594,7 +590,30 @@
   (use-package smartparens
     :config
     (smartparens-global-mode)
-    (require 'smartparens-config))
+    (require 'smartparens-config)
+    :general
+    (:keymaps 'smartparens-mode-map
+              "C-M-f" 'sp-forward-sexp 
+              "C-M-b" 'sp-backward-sexp
+              "C-M-a" 'sp-beginning-of-sexp
+              "C-M-e" 'sp-end-of-sexp
+              "C-M-n" 'sp-next-sexp
+              "C-M-p" 'sp-previous-sexp
+              "C-M-t" 'sp-transpose-sexp
+              "C-k" 'sp-kill-hybrid-sexp
+              "C-)" 'sp-forward-slurp-sexp 
+              "C-(" 'sp-backward-slurp-sexp 
+              "M-)" 'sp-forward-barf-sexp 
+              "M-(" 'sp-backward-barf-sexp 
+              "C-S-s" 'sp-splice-sexp
+              "C-M-S-<SPC>" (lambda () (interactive) (mark-sexp -1))
+              "C-M-k" 'sp-kill-sexp
+              "C-M-w" 'sp-copy-sexp
+              "C-M-c" 'sp-clone-sexp
+              "M-<delete>" 'sp-unwrap-sexp
+              "M-<backspace>" 'sp-backward-unwrap-sexp
+              )
+    )
 #+end_src
 ** org-bullets
 #+begin_src emacs-lisp
@@ -603,6 +622,16 @@
   (setq inhibit-compacting-font-caches t)
   (setq org-hide-emphasis-markers nil)
   (setq org-superstar-headline-bullets-list (quote ("◉" "◆" "☀" "○")))
+  (setq org-superstar-special-todo-items t)
+  (setq org-superstar-todo-bullet-alist
+          '(("TODO" "☐　")
+            ("NEXT" "✒　")
+            ("WAIT" "☕　")
+            ("CANCELLED" "✘　")
+            ("DONE" "✔　")))
+  (org-superstar-restart)
+  (setq org-indent-indentation-per-level 6)
+  (setq org-indent-boundary-char ?　)
 #+end_src
 ** undo-fu
 #+begin_src emacs-lisp
@@ -669,7 +698,6 @@
 #+begin_src emacs-lisp :tangle yes
   (use-package vterm
     :if (my-system-type-is-gnu))
-
   (use-package vterm-toggle
     :straight (vterm-toggle :type git :host github :repo "jixiuf/vterm-toggle")
     :if (my-system-type-is-gnu)
@@ -679,18 +707,19 @@
                  '("^v?term.*"
                    (display-buffer-reuse-window display-buffer-at-bottom)
                    (reusable-frames . visible)
-                   (window-height . 0.3)))
-    (define-key vterm-mode-map (kbd "<C-backspace>")
+                   (window-height . 0.3))))
+  (define-key vterm-mode-map (kbd "<C-backspace>")
       (lambda () (interactive) (vterm-send-key (kbd "C-w"))))
-    (defun vterm-counsel-yank-pop-action (orig-fun &rest args)
-      (if (equal major-mode 'vterm-mode)
-          (let ((inhibit-read-only t)
-                (yank-undo-function (lambda (_start _end) (vterm-undo))))
-            (cl-letf (((symbol-function 'insert-for-yank)
-                       (lambda (str) (vterm-send-string str t))))
+  (defun vterm-counsel-yank-pop-action (orig-fun &rest args)
+    (if (equal major-mode 'vterm-mode)
+        (let ((inhibit-read-only t)
+              (yank-undo-function (lambda (_start _end) (vterm-undo))))
+          (cl-letf (((symbol-function 'insert-for-yank)
+                 (lambda (str) (vterm-send-string str t))))
               (apply orig-fun args)))
-        (apply orig-fun args)))
-    (advice-add 'counsel-yank-pop-action :around #'vterm-counsel-yank-pop-action))
+      (apply orig-fun args)))
+
+  (advice-add 'counsel-yank-pop-action :around #'vterm-counsel-yank-pop-action)
 #+end_src
 ** Yaml-mode
 #+begin_src emacs-lisp :tangle yes
@@ -746,88 +775,98 @@
   #+end_src
 * Org-mode config
   #+begin_src emacs-lisp
-    (setq org-agenda-files '("~/Dropbox/Zettel/todo.org"))
-    (push 'org-habit org-modules)
-    (setq org-habit-show-habits-only-for-today nil)
+    (use-package org
+      :general
+      (:keymaps 'org-mode-map
+                "H-n" 'org-next-visible-heading
+                "H-p" 'org-previous-visible-heading
+                "H-f" 'org-forward-heading-same-level
+                "H-b" 'org-backward-heading-same-level)
+      :config
+      (push 'org-habit org-modules)
+      (setq
+       org-agenda-files '("~/Dropbox/Zettel/todo.org")
+       org-agenda-skip-scheduled-if-done t
+       org-habit-show-habits-only-for-today t
+       org-tags-exclude-from-inheritance '("project" "crypt")
+       org-tags-column 12
+       org-fast-tag-selection-single-key t
+       org-hide-leading-stars t
+       org-startup-indented t
+       org-capture-templates
+       '(("t" "Todo" entry (file "~/Dropbox/Zettel/todo.org")
+          "* TODO %?\n %i\n")
+         ("n" "Notes" entry (file "~/Dropbox/Zettel/20200829215348-brains.org")
+          "* %?\n %i\n"))
 
-    (setq org-capture-templates
-          '(("t" "Todo" entry (file "~/Dropbox/Zettel/todo.org")
-             "* TODO %?\n %i\n")
-            ("n" "Notes" entry (file "~/Dropbox/Zettel/20200829215348-brains.org")
-             "* %?\n %i\n")))
+       org-todo-keywords
+       '((sequence "TODO(t)" "NEXT(n)" "STRT(s)" "|" "DONE(d)" "DELEGATED(D)" "CANCELLED(c)"))
 
-    (setq org-tags-exclude-from-inheritance '("project" "crypt"))
+       org-todo-keyword-faces
+       '(("TODO" . "orange") ("NEXT" . "pink") ("STRT" . "green")
+         ("DONE" . "grey") ("DELEGATED" . "blue") ("CANCELLED" "yellow"))
+       )
+      )
 
     (defun my-mark-as-task ()
-    "This function makes sure that the current heading has
-    (2) has property COOKIE_DATA set to \"todo recursive\"
-    (3) has any TODO keyword and
-    (4) a leading progress indicator"
-        (interactive)
-        (org-set-property "COOKIE_DATA" "todo recursive") 
-        (org-set-property "ORDERED" "t")
-        (org-set-property "TRIGGER" "next-sibbling todo!(NEXT)")
-        (org-back-to-heading t)
-        (let* ((title (nth 4 (org-heading-components)))
-               (keyword (nth 2 (org-heading-components))))
-           (when (and (bound-and-true-p keyword) (string-prefix-p "[" title))
-               (message "TODO keyword and progress indicator found")
-               )
-           (when (and (not (bound-and-true-p keyword)) (string-prefix-p "[" title))
-               (message "no TODO keyword but progress indicator found")
-               (forward-whitespace 1)
-               (insert "TODO ")
-               )
-           )
-    )
+      "This function makes sure that the current heading has
+                (2) has property COOKIE_DATA set to \"todo recursive\"
+                (3) has any TODO keyword and
+                (4) a leading progress indicator"
+      (interactive)
+      (org-set-property "COOKIE_DATA" "todo recursive") 
+      (org-set-property "ORDERED" "t")
+      (org-set-property "TRIGGER" "next-sibbling todo!(NEXT)")
+      (org-back-to-heading t)
+      (let* ((title (nth 4 (org-heading-components)))
+             (keyword (nth 2 (org-heading-components))))
+        (when (and (bound-and-true-p keyword) (string-prefix-p "[" title))
+          (message "TODO keyword and progress indicator found")
+          )
+        (when (and (not (bound-and-true-p keyword)) (string-prefix-p "[" title))
+          (message "no TODO keyword but progress indicator found")
+          (forward-whitespace 1)
+          (insert "TODO ")
+          )
+        )
+      )
 
     (defun my-mark-as-project ()
-    "This function makes sure that the current heading has
-    (1) the tag :project:
-    (2) has property COOKIE_DATA set to \"todo recursive\"
-    (3) has any TODO keyword and
-    (4) a leading progress indicator"
-        (interactive)
-        (org-toggle-tag "project" 'on)
-        (org-set-property "COOKIE_DATA" "todo recursive")
-        (org-set-property "ORDERED" "t")
-        (org-set-property "TRIGGER" "next-sibbling todo!(NEXT)")
-        (org-back-to-heading t)
-        (let* ((title (nth 4 (org-heading-components)))
-               (keyword (nth 2 (org-heading-components))))
-           (when (and (bound-and-true-p keyword) (string-prefix-p "[" title))
-               (message "TODO keyword and progress indicator found")
-               )
-           (when (and (not (bound-and-true-p keyword)) (string-prefix-p "[" title))
-               (message "no TODO keyword but progress indicator found")
-               (forward-whitespace 1)
-               (insert "NEXT ")
-               )
-           (when (and (not (bound-and-true-p keyword)) (not (string-prefix-p "[" title)))
-               (message "no TODO keyword and no progress indicator found")
-               (forward-whitespace 1)
-               (insert "NEXT [/] ")
-               )
-           (when (and (bound-and-true-p keyword) (not (string-prefix-p "[" title)))
-               (message "TODO keyword but no progress indicator found")
-               (forward-whitespace 2)
-               (insert "[/] ")
-               )
-           )
-    )
+      "This function makes sure that the current heading has
+                (1) the tag :project:
+                (2) has property COOKIE_DATA set to \"todo recursive\"
+                (3) has any TODO keyword and
+                (4) a leading progress indicator"
+      (interactive)
+      (org-toggle-tag "project" 'on)
+      (org-set-property "COOKIE_DATA" "todo recursive")
+      (org-set-property "ORDERED" "t")
+      (org-set-property "TRIGGER" "next-sibbling todo!(NEXT)")
+      (org-back-to-heading t)
+      (let* ((title (nth 4 (org-heading-components)))
+             (keyword (nth 2 (org-heading-components))))
+        (when (and (bound-and-true-p keyword) (string-prefix-p "[" title))
+          (message "TODO keyword and progress indicator found")
+          )
+        (when (and (not (bound-and-true-p keyword)) (string-prefix-p "[" title))
+          (message "no TODO keyword but progress indicator found")
+          (forward-whitespace 1)
+          (insert "NEXT ")
+          )
+        (when (and (not (bound-and-true-p keyword)) (not (string-prefix-p "[" title)))
+          (message "no TODO keyword and no progress indicator found")
+          (forward-whitespace 1)
+          (insert "NEXT [/] ")
+          )
+        (when (and (bound-and-true-p keyword) (not (string-prefix-p "[" title)))
+          (message "TODO keyword but no progress indicator found")
+          (forward-whitespace 2)
+          (insert "[/] ")
+          )
+        )
+      )
 
-    (setq org-todo-keywords
-          '((sequence "TODO(t)" "NEXT(n)" "STRT(s)" "|" "DONE(d)" "DELEGATED(D)" "CANCELLED(c)")))
-
-    (setq org-todo-keyword-faces
-          '(("TODO" . "orange") ("NEXT" . "pink") ("STRT" . "green")
-            ("DONE" . "grey") ("DELEGATED" . "blue") ("CANCELLED" "yellow")))
-
-    (setq org-tags-column 12)
-    (setq org-fast-tag-selection-single-key t)
-    (setq org-hide-leading-stars t)
-    (setq org-startup-indented t)
-  #+end_src  
+      #+end_src  
 * Helm-recoll
 #+begin_src emacs-lisp
   (use-package helm-recoll
