--- a/init.org
+++ b/init.org
@@ -165,8 +165,8 @@
 #+end_src
 * Faces for emacs
 #+begin_src emacs-lisp
-  (set-face-attribute 'default nil :font "Hack Nerd Font-11")
-  (set-face-attribute 'fixed-pitch nil :font "Hack Nerd Font-11")
+  (set-face-attribute 'default nil :font "Hack NF-11")
+  (set-face-attribute 'fixed-pitch nil :font "Hack NF-11")
   (set-face-attribute 'variable-pitch nil :font "Source Sans Pro-13")
   (add-hook 'org-mode-hook 'variable-pitch-mode)
   (custom-theme-set-faces
@@ -176,7 +176,7 @@
    `(org-level-3 ((t (:height 1.1))))
    `(org-level-4 ((t (:height 1)))))
   (add-to-list 'default-frame-alist
-               '(font . "Hack Nerd Font-12"))
+               '(font . "Hack NF-12"))
 #+end_src
 * Keybindings
 #+begin_src emacs-lisp
@@ -707,19 +707,11 @@
                  '("^v?term.*"
                    (display-buffer-reuse-window display-buffer-at-bottom)
                    (reusable-frames . visible)
-                   (window-height . 0.3))))
-  (define-key vterm-mode-map (kbd "<C-backspace>")
+                   (window-height . 0.3)))
+    (define-key vterm-mode-map (kbd "<C-backspace>")
       (lambda () (interactive) (vterm-send-key (kbd "C-w"))))
-  (defun vterm-counsel-yank-pop-action (orig-fun &rest args)
-    (if (equal major-mode 'vterm-mode)
-        (let ((inhibit-read-only t)
-              (yank-undo-function (lambda (_start _end) (vterm-undo))))
-          (cl-letf (((symbol-function 'insert-for-yank)
-                 (lambda (str) (vterm-send-string str t))))
-              (apply orig-fun args)))
-      (apply orig-fun args)))
-
   (advice-add 'counsel-yank-pop-action :around #'vterm-counsel-yank-pop-action)
+    )
 #+end_src
 ** Yaml-mode
 #+begin_src emacs-lisp :tangle yes
